[gd_scene load_steps=4 format=3 uid="uid://canvas_cube_with_preview_001"]

[ext_resource type="PackedScene" uid="uid://canvas_cube_painter_ui_001" path="res://src/ui/CanvasCubePainterUI.tscn" id="1_ui"]
[ext_resource type="PackedScene" uid="uid://painted_cube_001" path="res://src/objects/PaintedCube.tscn" id="2_cube"]
[ext_resource type="Script" path="res://src/test/canvas_cube_painter_with_preview.gd" id="3_script"]

[node name="CanvasCubePainterWithPreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_script")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasCubePainterUI" parent="HSplitContainer" instance=ExtResource("1_ui")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/PreviewPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PreviewPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "3D Cube Preview"
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(400, 400)
render_target_update_mode = 4
own_world_3d = true

[node name="Camera3D" type="Camera3D" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2.5, 2, 3.5)
cull_mask = 2
fov = 50.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 3, 5, 3)
light_energy = 0.8
light_cull_mask = 2
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport"]

[node name="PaintedCube" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("2_cube")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
layers = 2
cube_size = 1.5
auto_rotate = true
rotation_speed = 1.0

[node name="ControlsHBox" type="HBoxContainer" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RotateCheck" type="CheckBox" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/ControlsHBox"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Auto Rotate"

[node name="SpeedLabel" type="Label" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/ControlsHBox"]
layout_mode = 2
text = "Speed:"

[node name="SpeedSlider" type="HSlider" parent="HSplitContainer/PreviewPanel/MarginContainer/VBoxContainer/ControlsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0
